--- a/index.html
+++ b/index.html
@@ -85,29 +85,98 @@
 
     <section class="faq">
         <h2>Frequently Asked Questions</h2>
-        <div class="faqbox">
-            <span>What is Netflix?</span>
-            <span><img src="assests/images/icon2.svg"></span>
-        </div>
-        <div class="faqbox">
-            <span>How much does Netflix cost?</span>
-            <span><img src="assests/images/icon2.svg"></span>
-        </div>
-        <div class="faqbox">
-            <span>Where can I watch?</span>
-            <span><img src="assests/images/icon2.svg"></span>
-        </div>
-        <div class="faqbox">
-            <span>How do I cancel?</span>
-            <span><img src="assests/images/icon2.svg"></span>
-        </div>
-        <div class="faqbox">
-            <span>What can I watch on Netflix?</span>
-            <span><img src="assests/images/icon2.svg"></span>
-        </div>
-        <div class="faqbox">
-            <span>Is Netflix good for kids?</span>
-            <span><img src="assests/images/icon2.svg"></span>
+        <div class="faq-list">
+            <div class="faqbox">
+                <div class="ques">
+                    <p>What is Netflix?</p>
+                    <span><img src="assests/images/icon2.svg"></span>
+                </div>
+
+                <div class="ans">
+                    <p>
+                        Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies,
+                        anime, documentaries and more – on thousands of internet-connected devices.
+                        <br>
+                        You can watch as much as you want, whenever you want, without a single ad – all for one low
+                        monthly price. There's always something new to discover, and new TV shows and movies are added
+                        every week!
+                    </p>
+                </div>
+            </div>
+            <div class="faqbox">
+                <div class="ques">
+                    <p>How much does Netflix cost?</p>
+                    <span><img src="assests/images/icon2.svg"></span>
+                </div>
+
+                <div class="ans">
+                    <p>
+                        Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one
+                        fixed monthly fee. Plans range from ₹149 to ₹649 a month. No extra costs, no contracts.
+                    </p>
+                </div>
+            </div>
+            <div class="faqbox">
+                <div class="ques">
+                    <p>Where can I watch?</p>
+                    <span><img src="assests/images/icon2.svg"></span>
+                </div>
+
+                <div class="ans">
+                    <p>
+                        Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at
+                        netflix.com from your personal computer or on any internet-connected device that offers the
+                        Netflix app, including smart TVs, smartphones, tablets, streaming media players and game
+                        consoles.
+                        <br>
+                        You can also download your favourite shows with the iOS or Android app. Use downloads to watch
+                        while you're on the go and without an internet connection. Take Netflix with you anywhere.
+                    </p>
+                </div>
+            </div>
+            <div class="faqbox">
+                <div class="ques">
+                    <p>How do I cancel?</p>
+                    <span><img src="assests/images/icon2.svg"></span>
+                </div>
+
+                <div class="ans">
+                    <p>
+                        Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel
+                        your account online in two clicks. There are no cancellation fees – start or stop your account
+                        anytime.
+                    </p>
+                </div>
+            </div>
+            <div class="faqbox">
+                <div class="ques">
+                    <p>What can I watch on Netflix?</p>
+                    <span><img src="assests/images/icon2.svg"></span>
+                </div>
+
+                <div class="ans">
+                    <p>
+                        Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning
+                        Netflix originals, and more. Watch as much as you want, anytime you want.
+                    </p>
+                </div>
+            </div>
+            <div class="faqbox">
+                <div class="ques">
+                    <p>Is Netflix good for kids?</p>
+                    <span><img src="assests/images/icon2.svg"></span>
+
+                </div>
+                <div class="ans">
+                    <p>
+                        The Netflix Kids experience is included in your membership to give parents control while kids
+                        enjoy family-friendly TV shows and films in their own space.
+                        <br>
+                        Kids profiles come with PIN-protected parental controls that let you restrict the maturity
+                        rating of content kids can watch and block specific titles you don’t want kids to see.
+                    </p>
+                </div>
+            </div>
         </div>
 
         <div class="faq-text">
